src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__cast_string_to_jsonb.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(\n    sqlname = \"text_to_jsonb\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastJsonbToString)\n)]\nfn cast_string_to_jsonb<'a>(a: &'a str) -> Result<Jsonb, EvalError> {\n    Ok(strconv::parse_jsonb(a)?)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastStringToJsonb;
impl crate::func::EagerUnaryFunc for CastStringToJsonb {
    type Input<'a> = &'a str;
    type Output<'a> = Result<Jsonb, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_string_to_jsonb(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastJsonbToString)
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastStringToJsonb {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("text_to_jsonb")
    }
}
fn cast_string_to_jsonb<'a>(a: &'a str) -> Result<Jsonb, EvalError> {
    Ok(strconv::parse_jsonb(a)?)
}
