src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__cast_string_to_pg_legacy_name.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(sqlname = \"text_to_name\", preserves_uniqueness = true)]\nfn cast_string_to_pg_legacy_name<'a>(a: &'a str) -> PgLegacyName<String> {\n    PgLegacyName(strconv::parse_pg_legacy_name(a))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastStringToPgLegacyName;
impl crate::func::EagerUnaryFunc for CastStringToPgLegacyName {
    type Input<'a> = &'a str;
    type Output<'a> = PgLegacyName<String>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_string_to_pg_legacy_name(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastStringToPgLegacyName {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("text_to_name")
    }
}
fn cast_string_to_pg_legacy_name<'a>(a: &'a str) -> PgLegacyName<String> {
    PgLegacyName(strconv::parse_pg_legacy_name(a))
}
