src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__cast_string_to_uint16.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(\n    sqlname = \"text_to_uint2\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastUint16ToString)\n)]\nfn cast_string_to_uint16(a: &str) -> Result<u16, EvalError> {\n    strconv::parse_uint16(a).err_into()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastStringToUint16;
impl crate::func::EagerUnaryFunc for CastStringToUint16 {
    type Input<'a> = &'a str;
    type Output<'a> = Result<u16, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_string_to_uint16(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastUint16ToString)
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastStringToUint16 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("text_to_uint2")
    }
}
fn cast_string_to_uint16(a: &str) -> Result<u16, EvalError> {
    strconv::parse_uint16(a).err_into()
}
